- Minor changes to how the server interacts with the database - New function which enables the remote client to get a list of all available vaccines and list them in a drop down selector in order to update values for a specific patient - Re-Added labels for input elements on website - Added a check to make sure that a patients chosen password is actually correct by adding a password confirm input and checking the two - New input area for updating patients vaccine status - Rewrote hash function to take a list of inputs instead of two fixed values - Rearranged script.js to make it more readable - Rewrote /create_user - Added endpoint which allows the remote client to get a list of available vaccines - changed labels to display as blocks in css

--- a/src/style.css
+++ b/src/style.css
@@ -17,3 +17,7 @@ table {
     position: relative;
     right: 0;
 }
+
+label {
+    display: block;
+}
